@@ -1,3 +1,10 @@
+2004-05-09  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_web_admin.erl: Updated
+
+	* src/ejabberd_listener.erl: Added API for adding/removing
+	listeners
+
 2004-05-08  Alexey Shchepin  <alexey@sevcom.net>
 
 	* doc/guide.tex: Updated
